# jwb

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ablog.rst  about.rst  asyncfast.rst  conf.py  docs-requirements.txt  index.rst  pyproject.toml  robots.txt
_ext/: readtime.py
_static/css/: custom.css
blog/2025/: best_header_you_probably_havent_heard_of.rst  magic_of_the_callable_abstraction.rst  significance_of_performance_testing.rst
blog/2025/callable/: asgi_example.py  coffee_example.py  kafka_01.py  kafka_02.py  kafka_03.py  kafka_04.py  kafka_05.py  main.py  wsgi_example.py
blog/2025/examples/: cgi_example.sh  coffee_example.py  comparison.ipynb  createOrder.asgi.json  createOrder.echoSetHeader.json  createOrder.json  createOrder.reply.asgi.json  createOrder.reply.json  echo_set_header.py  fastapi_app.py  fastapi_app_database.py  kafka2asgi_01.py  kafka2asgi_02.py  kafka2asgi_03.py  kafka2asgi_06.py  kafka_01.py  kafka_02.py  kafka_03.py  kafka_04.py  kafka_05.py  kafka_locustfile_01.py  kafka_locustfile_02.py  kafka_locustfile_03.py  main.py
blog/2025/header/: createOrder.asgi.json  createOrder.echoSetHeader.json  createOrder.json  createOrder.reply.json  echo_set_header.py  fastapi_app.py
examples/: lifespan.py
