[project]
name = "jwb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ablog>=0.11.12",
    "aiokafka>=0.12.0",
    "pydata-sphinx-theme>=0.16.1",
    "rstfmt>=0.0.14",
    "sphinx>=8.2.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-togglebutton>=0.3.2",
    "uvicorn>=0.37.0",
]
